[package]
name = "rust_cource"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["full"] }
prost = "0.13"
tonic = {version = "0.13.1", features = ["tls-ring"]}
tokio-stream = "0.1.17"
async-stream = "0.3.6"
log = "0.4.27"
env_logger = "0.11.8"
ansi_term = "0.12.1"


[build-dependencies]
prost-build = "0.13.5"
tonic-build = "0.13.1"


[[bin]]
name = "prost-demo"
path = "src/bin/prost-demo/main.rs"

[[bin]]
name = "tonic-server"
path = "src/bin/tonic-demo/server.rs"

[[bin]]
name = "tonic-client"
path = "src/bin/tonic-demo/client.rs"

[[bin]]
name = "tonic-tls-server"
path = "src/bin/tonic-tls-demo/server.rs"

[[bin]]
name = "tonic-tls-client"
path = "src/bin/tonic-tls-demo/client.rs"

[[bin]]
name = "tonic-tls-endpoint-server"
path = "src/bin/tonic-tls-endpoint-demo/server.rs"

[[bin]]
name = "tonic-tls-endpoint-client"
path = "src/bin/tonic-tls-endpoint-demo/client.rs"

[[bin]]
name = "env_logger"
path = "src/bin/env_logger-demo/main.rs"
